--- a/hadith-finder/hadith-lo-backend/vercel.json
+++ b/hadith-finder/hadith-lo-backend/vercel.json
@@ -9,6 +9,10 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "main.py"
+    },
+    {
       "src": "/(.*)",
       "dest": "main.py"
     }
