--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.115.12
 mangum==0.19.0
-google-generativeai==0.8.5
+google-generativeai==0.7.2
 crewai==0.114.0
 langdetect==1.0.9
 python-dotenv==1.1.0
 uvicorn==0.34.2
+pydantic==2.11.3
+requests==2.32.3
